<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background = "@drawable/pet_background"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="35sp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="cursive"/>

    <TextView
        android:id="@+id/command_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/command"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <RadioGroup
        android:id="@+id/radio_group_commands"
        android:layout_marginTop="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_text">

        <RadioButton
            android:id="@+id/radio_feed_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_now"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radio_feed_in_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_in_four"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radio_feed_in_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_in_six"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radio_feed_in_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_in_eight"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_send"
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group_commands"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_button_normal"
        android:text="@string/send_bt_text"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:textColor="@color/colorWhite"/>



    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_text"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_send"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/status_command_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_text"
        android:hint="@string/Status_hint"
        android:textColorHint="@color/colorRed"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:importantForAutofill="no"
        android:maxLength="1"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:id="@+id/status_command_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_command_text"
        android:textSize="12sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_command_edit"
        />

    <EditText
        android:id="@+id/status_read_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_command_text"
        android:hint="@string/Status_hint"
        android:textColorHint="@color/colorRed"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:importantForAutofill="no"
        android:maxLength="1"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:id="@+id/status_read_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_command_status_text"
        android:textSize="12sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_read_edit"
        />


</androidx.constraintlayout.widget.ConstraintLayout>